tests/rpm-pkgs/libxmlb-0.3.2-2.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING:
libxmlb-0.3.2/redhat-linux-build/tmp-introspectwy_fotr6/Xmlb-2.0.c:251:13: warning: Not available before 2.70
#  251 |   if (G_TYPE_IS_FINAL (type))
#      |             ^~~~~~~~~~~~~~~~~          

Error: COMPILER_WARNING:
libxmlb-0.3.2/redhat-linux-build/tmp-introspectwy_fotr6/Xmlb-2.0.c:369:13: warning: Not available before 2.70
#  369 |   if (G_TYPE_IS_FINAL (type))
#      |             ^~~~~~~~~~~~~~~~~          
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics

Error: COMPILER_WARNING:
libxmlb-0.3.2/src/xb-query-context.c:37:13: warning: Not available before 2.60
#   37 | G_STATIC_ASSERT (G_ALIGNOF (XbQueryContext) == G_ALIGNOF (RealQueryContext));
#      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
#   35|   G_STATIC_ASSERT (sizeof (XbQueryContext) == sizeof (RealQueryContext));
#   36|   #if GLIB_CHECK_VERSION(2, 60, 0)
#   37|-> G_STATIC_ASSERT (G_ALIGNOF (XbQueryContext) == G_ALIGNOF (RealQueryContext));
#   38|   #endif
#   39|   

Error: COMPILER_WARNING:
libxmlb-0.3.2/src/xb-value-bindings.c:42:13: warning: Not available before 2.60
#   42 | G_STATIC_ASSERT (G_ALIGNOF (XbValueBindings) == G_ALIGNOF (RealValueBindings));
#      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
#   40|   G_STATIC_ASSERT (sizeof (XbValueBindings) == sizeof (RealValueBindings));
#   41|   #if GLIB_CHECK_VERSION(2, 60, 0)
#   42|-> G_STATIC_ASSERT (G_ALIGNOF (XbValueBindings) == G_ALIGNOF (RealValueBindings));
#   43|   #endif
#   44|   
